--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -58,10 +58,15 @@ body::after {
 	.lock & {
 		visibility: visible;
 	}
+
+	&--consultation {
+		max-width: 1100px;
+	}
 }
 
 .popup__close {
 	display: block;
+
 	margin-left: auto;
 
 	path {
