--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -92,7 +92,7 @@
         line-height: 19px;
         letter-spacing: -1px;
         text-transform: uppercase;
-        margin-left: auto;
+        // margin-left: auto;
         transition: all 0.3s ease;
         display: flex;
         align-items: center;
@@ -100,7 +100,7 @@
         background: #F9C98C;
         border-radius: 20px;
         padding: 6px 12px;
-        margin-top: -32px;
+        // margin-top: -32px;
 
         @media (max-width: 1200px) {
             padding: 4px 10px;
